# ado-mcp-agent

./: LICENSE  README.MD  pyproject.toml
data/config/: personality.py
src/: main.py
src/config/: personality.py
src/core/: assistant.py  graph.py
src/core/models/: agent_state.py
src/core/notebook/: graph.ipynb
src/services/llm/: agent.py
src/services/tools/: llm_selector_tool.py
